--- a/web-template/assets/css/edit.css
+++ b/web-template/assets/css/edit.css
@@ -30,6 +30,10 @@
     color: rgb(255, 255, 255);
 }
 
+#tools-tech-container{
+    background: rgb(12, 12, 12);
+}
+
 #projects-box .image{
     /* filter: brightness(50%); */
 }
